team-app/main/default/objects/Waterfall_Rate__c/Waterfall_Rate__c.object-meta.xml
<CustomObject>
    <description>Calibrated AE waterfall rates (blended and raw) per AE and per AE x solution. Written by WaterfallRateEngine so a closed period can be audited.</description>
    <label>Waterfall Rate</label>
    <nameField>
        <displayFormat>WFR-{000000}</displayFormat>
        <label>Rate Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Waterfall Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>