team-app/main/default/objects/Waterfall_Rate__c/fields/Activity_Data_Complete__c.field-meta.xml
<CustomField>
    <fullName>Activity_Data_Complete__c</fullName>
    <description>Share of completed Call tasks with SalesLoft1__Call_Disposition__c populated. Below 70% the UI is indicative only.</description>
    <inlineHelpText>Share of completed Call tasks with SalesLoft1__Call_Disposition__c populated. Below 70% the UI is indicative only.</inlineHelpText>
    <label>Activity Data Complete</label>
    <precision>8</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>