team-app/main/default/objects/Waterfall_Rate__c/fields/AE__c.field-meta.xml
<CustomField>
    <fullName>AE__c</fullName>
    <description>Opportunity owner whose rates this row stores. Resolved from ManagerId, never a hardcoded user.</description>
    <inlineHelpText>Opportunity owner whose rates this row stores. Resolved from ManagerId, never a hardcoded user.</inlineHelpText>
    <label>AE</label>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>User</referenceTo>
    <relationshipName>Waterfall_Rates</relationshipName>
    <type>Lookup</type>
</CustomField>