team-app/main/default/objects/Waterfall_Rate__c/fields/Arr_Bearing_Wins__c.field-meta.xml
<CustomField>
    <fullName>Arr_Bearing_Wins__c</fullName>
    <description>Won deals with ARR_Opportunity_Amount_USD_Num__c greater than zero. ASP denominator.</description>
    <inlineHelpText>Won deals with ARR_Opportunity_Amount_USD_Num__c greater than zero. ASP denominator.</inlineHelpText>
    <label>ARR Bearing Wins</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>