team-app/main/default/objects/Waterfall_Rate__c/fields/Arr_Won__c.field-meta.xml
<CustomField>
    <fullName>Arr_Won__c</fullName>
    <description>Sum of ARR on ARR-bearing wins. Number, not Currency, so CAD does not double convert.</description>
    <inlineHelpText>Sum of ARR on ARR-bearing wins. Number, not Currency, so CAD does not double convert.</inlineHelpText>
    <label>ARR Won</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>