team-app/main/default/objects/Waterfall_Rate__c/fields/ASP_Blended__c.field-meta.xml
<CustomField>
    <fullName>ASP_Blended__c</fullName>
    <description>Shrinkage blend of personal ASP against the team baseline. K=20.</description>
    <inlineHelpText>Shrinkage blend of personal ASP against the team baseline. K=20.</inlineHelpText>
    <label>ASP Blended</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>