team-app/main/default/objects/Waterfall_Rate__c/fields/ASP_Raw__c.field-meta.xml
<CustomField>
    <fullName>ASP_Raw__c</fullName>
    <description>Personal ASP from ARR-bearing wins only. Zero-ARR wins are out of this denominator.</description>
    <inlineHelpText>Personal ASP from ARR-bearing wins only. Zero-ARR wins are out of this denominator.</inlineHelpText>
    <label>ASP Raw</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>