team-app/main/default/objects/Waterfall_Rate__c/fields/Closed_Count__c.field-meta.xml
<CustomField>
    <fullName>Closed_Count__c</fullName>
    <description>Gated closed deals in the window (SQL stamped; non-competitive losses excluded).</description>
    <inlineHelpText>Gated closed deals in the window (SQL stamped; non-competitive losses excluded).</inlineHelpText>
    <label>Closed Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>