team-app/main/default/objects/Waterfall_Rate__c/fields/Connect_Rate__c.field-meta.xml
<CustomField>
    <fullName>Connect_Rate__c</fullName>
    <description>Connected / (dispositioned Call tasks minus Wrong Number and Not in Service). Dispositioned tasks only.</description>
    <inlineHelpText>Connected / (dispositioned Call tasks minus Wrong Number and Not in Service). Dispositioned tasks only.</inlineHelpText>
    <label>Connect Rate</label>
    <precision>8</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>