team-app/main/default/objects/Waterfall_Rate__c/fields/Cycle_Median_Days__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Median_Days__c</fullName>
    <description>Median Days_since_SQL__c on gated wins. Negatives dropped, not clamped.</description>
    <inlineHelpText>Median Days_since_SQL__c on gated wins. Negatives dropped, not clamped.</inlineHelpText>
    <label>Cycle Median Days</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>