team-app/main/default/objects/Waterfall_Rate__c/fields/Lands_Quarters__c.field-meta.xml
<CustomField>
    <fullName>Lands_Quarters__c</fullName>
    <description>How many quarters out today's created pipeline lands: ceil(median days / 91), minimum 1.</description>
    <inlineHelpText>How many quarters out today's created pipeline lands: ceil(median days / 91), minimum 1.</inlineHelpText>
    <label>Lands Quarters</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>