team-app/main/default/objects/Waterfall_Rate__c/fields/Opps_Per_Connect__c.field-meta.xml
<CustomField>
    <fullName>Opps_Per_Connect__c</fullName>
    <description>Self-sourced created opportunities per usable connect in the current period.</description>
    <inlineHelpText>Self-sourced created opportunities per usable connect in the current period.</inlineHelpText>
    <label>Opps Per Connect</label>
    <precision>8</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>