team-app/main/default/objects/Waterfall_Rate__c/fields/Qual_Rate__c.field-meta.xml
<CustomField>
    <fullName>Qual_Rate__c</fullName>
    <description>True cohort: of opportunities created in the window, share that ever received a SQL stamp. Both halves use CreatedDate.</description>
    <inlineHelpText>True cohort: of opportunities created in the window, share that ever received a SQL stamp. Both halves use CreatedDate.</inlineHelpText>
    <label>Qualification Rate</label>
    <precision>8</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>