team-app/main/default/objects/Waterfall_Rate__c/fields/Sample_Confidence__c.field-meta.xml
<CustomField>
    <fullName>Sample_Confidence__c</fullName>
    <description>High at 50+ gated closes, Medium at 15+, otherwise Low. Labels thin personal rates.</description>
    <inlineHelpText>High at 50+ gated closes, Medium at 15+, otherwise Low. Labels thin personal rates.</inlineHelpText>
    <label>Sample Confidence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
                <default>true</default>
                <label>Low</label>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>