team-app/main/default/objects/Waterfall_Rate__c/fields/Self_Sourced_Share__c.field-meta.xml
<CustomField>
    <fullName>Self_Sourced_Share__c</fullName>
    <description>Share of SQL-dated pipeline from AE Outbound plus AM. Controller clamps at 100% as a mixed-anchor tripwire.</description>
    <inlineHelpText>Share of SQL-dated pipeline from AE Outbound plus AM. Controller clamps at 100% as a mixed-anchor tripwire.</inlineHelpText>
    <label>Self Sourced Share</label>
    <precision>8</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>