team-app/main/default/objects/Waterfall_Rate__c/fields/Win_Rate_Blended__c.field-meta.xml
<CustomField>
    <fullName>Win_Rate_Blended__c</fullName>
    <description>Shrinkage blend of personal gated win rate against the team baseline. K=20.</description>
    <inlineHelpText>Shrinkage blend of personal gated win rate against the team baseline. K=20.</inlineHelpText>
    <label>Win Rate Blended</label>
    <precision>8</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>