team-app/main/default/objects/Waterfall_Rate__c/fields/Win_Rate_Raw__c.field-meta.xml
<CustomField>
    <fullName>Win_Rate_Raw__c</fullName>
    <description>Personal gated win rate: wins / closed. Null when closed is zero.</description>
    <inlineHelpText>Personal gated win rate: wins / closed. Null when closed is zero.</inlineHelpText>
    <label>Win Rate Raw</label>
    <precision>8</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>