team-app/main/default/objects/Waterfall_Rate__c/fields/Win_Rate_Ungated__c.field-meta.xml
<CustomField>
    <fullName>Win_Rate_Ungated__c</fullName>
    <description>Ungated closed win rate (Insights convention). Stored so the gate is labelled, not hidden.</description>
    <inlineHelpText>Ungated closed win rate (Insights convention). Stored so the gate is labelled, not hidden.</inlineHelpText>
    <label>Win Rate Ungated</label>
    <precision>8</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>