team-app/main/default/objects/Waterfall_Rate__c/fields/Window_End__c.field-meta.xml
<CustomField>
    <fullName>Window_End__c</fullName>
    <description>Last day of the trailing calibration window.</description>
    <inlineHelpText>Last day of the trailing calibration window.</inlineHelpText>
    <label>Window End</label>
    <type>Date</type>
</CustomField>