team-app/main/default/objects/Waterfall_Rate__c/fields/Window_Start__c.field-meta.xml
<CustomField>
    <fullName>Window_Start__c</fullName>
    <description>First day of the trailing calibration window (typically eight quarters).</description>
    <inlineHelpText>First day of the trailing calibration window (typically eight quarters).</inlineHelpText>
    <label>Window Start</label>
    <type>Date</type>
</CustomField>