team-app/main/default/objects/Waterfall_Rate__c/fields/Wins__c.field-meta.xml
<CustomField>
    <fullName>Wins__c</fullName>
    <description>Won deals in the gated closed set. Zero-ARR wins count here.</description>
    <inlineHelpText>Won deals in the gated closed set. Zero-ARR wins count here.</inlineHelpText>
    <label>Wins</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>